project desc overflowing bug fixed in responsive css

--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -119,9 +119,9 @@
 	nav{
 		opacity: 1;
 	}
-	.projects-desc{
+	/*.projects-desc{
 		height: 70px;
-	}
+	} */
 	.img-projects{
 		min-width: 0;
 		min-height: 0;
@@ -200,9 +200,9 @@
 	.box{
 		width: 100%;
 	}
-	.projects-desc{
+	/*.projects-desc{
 		height: 120px;
-	}
+	}*/
 	.img-projects{
 		min-width: 0;
 		min-height: 0;
